--- a/data/spells/divination-03-LQzlKbYjZSMFQawP.htm
+++ b/data/spells/divination-03-LQzlKbYjZSMFQawP.htm
@@ -5,7 +5,7 @@ Nom: Localisation
 
 ------ Data ------
 RangeEN: 500 feet
-RangeFR: 
+RangeFR: 150 m
 TargetEN: 1 specific object or type of object
 TargetFR: 
 ------ Description (en) ------
