--- a/data/spells/evocation-03-sxQZ6yqTn0czJxVd.htm
+++ b/data/spells/evocation-03-sxQZ6yqTn0czJxVd.htm
@@ -7,7 +7,7 @@ Nom: Boule de feu
 AreasizeEN: 20-foot burst
 AreasizeFR: 
 RangeEN: 500 feet
-RangeFR: 
+RangeFR: 150 m
 ------ Description (en) ------
 <p>A roaring blast of fire appears at a spot you designate, dealing 6d6 fire damage.</p>
 <hr />
