--- a/data/spells/evocation-05-zfn5RqAdF63neqpP.htm
+++ b/data/spells/evocation-05-zfn5RqAdF63neqpP.htm
@@ -7,7 +7,7 @@ Nom: Contrôle de l'eau
 AreasizeEN: 50 feet long by 50 feet wide
 AreasizeFR: 
 RangeEN: 500 feet
-RangeFR: 
+RangeFR: 150 m
 ------ Description (en) ------
 <p>By imposing your will upon the water, you can raise or lower the level of water in the chosen area by 10 feet. Water creatures in the area are subjected to the effects of @Compendium[pf2e.spells-srd.WsUwpfmhKrKwoIe3]{Slow}.</p>
 ------ Description (fr) ------
