--- a/data/spells/evocation-06-TDNlDWbYb58Y55Da.htm
+++ b/data/spells/evocation-06-TDNlDWbYb58Y55Da.htm
@@ -5,7 +5,7 @@ Nom: Éclairs multiples
 
 ------ Data ------
 RangeEN: 500 feet
-RangeFR: 
+RangeFR: 150 m
 TargetEN: 1 creature, plus any number of additional creatures
 TargetFR: 
 ------ Description (en) ------
