--- a/data/spells/illusion-01-2oH5IufzdESuYxat.htm
+++ b/data/spells/illusion-01-2oH5IufzdESuYxat.htm
@@ -7,7 +7,7 @@ Nom: Objet illusoire
 AreasizeEN: 20-foot burst
 AreasizeFR: 
 RangeEN: 500 feet
-RangeFR: 
+RangeFR: 150 m
 ------ Description (en) ------
 <p>You create an illusory visual image of a stationary object. The entire image must fit within the spell's area. The object appears to animate naturally, but it doesn't make sounds or generate smells. For example, water would appear to pour down an illusory waterfall, but it would be silent.</p>
 <p>Any creature that touches the image or uses the Seek action to examine it can attempt to disbelieve your illusion.</p>
