--- a/data/spells/illusion-08-YiIOsc8T6E2iDxgh.htm
+++ b/data/spells/illusion-08-YiIOsc8T6E2iDxgh.htm
@@ -5,7 +5,7 @@ Nom: Saper la réalité
 
 ------ Data ------
 RangeEN: 500 feet
-RangeFR: 
+RangeFR: 150 m
 TargetEN: 1 creature
 TargetFR: 1 créature
 ------ Description (en) ------
