--- a/data/spells/necromancy-08-M0jQlpQYUr0pp2Sv.htm
+++ b/data/spells/necromancy-08-M0jQlpQYUr0pp2Sv.htm
@@ -5,7 +5,7 @@ Nom: Flétrissure
 
 ------ Data ------
 RangeEN: 500 feet
-RangeFR: 
+RangeFR: 150 m
 TargetEN: any number of living creatures
 TargetFR: 
 ------ Description (en) ------
