--- a/data/spells/conjuration-01-myC2EIrsjmB8xosi.htm
+++ b/data/spells/conjuration-01-myC2EIrsjmB8xosi.htm
@@ -5,7 +5,7 @@ Nom: Bourrasque agressive
 
 ------ Data ------
 RangeEN: 500 feet
-RangeFR: 
+RangeFR: 150 m
 TargetEN: 1 creature
 TargetFR: 1 créature
 ------ Description (en) ------
