--- a/data/spells/conjuration-06-JbAcSLu62TU1OgNF.htm
+++ b/data/spells/conjuration-06-JbAcSLu62TU1OgNF.htm
@@ -7,7 +7,7 @@ Nom: Entraves végétales
 AreasizeEN: 40-foot burst
 AreasizeFR: 
 RangeEN: 500 feet
-RangeFR: 
+RangeFR: 150 m
 ------ Description (en) ------
 <p>Dense, twitching creepers sprout from every surface and fill any bodies of water in the area. Any creature moving on the land, or Climbing or Swimming within the creepers, takes a -10- foot circumstance penalty to its Speeds while in the area. Once per round, you can make a vine lash out from any square within the expanse of creepers by using a single action, which has the concentrate trait. This vine has a 15-foot reach. Make a melee spell attack roll against the target; on a success, the vine pulls the target into the creepers and makes it @Compendium[pf2e.conditionitems.eIcWbB5o3pP6OIMe]{Immobilized} for 1 round or until the creature Escapes (against your spell DC), whichever comes first.</p>
 ------ Description (fr) ------
