--- a/data/spells/conjuration-09-xxhS66k68u5iIOHC.htm
+++ b/data/spells/conjuration-09-xxhS66k68u5iIOHC.htm
@@ -7,7 +7,7 @@ Nom: Soulèvement
 AreasizeEN: 150-foot burst
 AreasizeFR: 
 RangeEN: 500 feet
-RangeFR: 
+RangeFR: 150 m
 ------ Description (en) ------
 <p>The ground in the area shudders and crumbles as huge pillars of stone erupt into the air, rending the terrain around them.</p>
 <p>The GM might add additional effects in certain areas. Cliffs might collapse, causing creatures to fall, or a river might be blocked and flood the surrounding area.</p>
