--- a/data/spells/evocation-01-bSDTWUIvgXkBaEv8.htm
+++ b/data/spells/evocation-01-bSDTWUIvgXkBaEv8.htm
@@ -5,7 +5,7 @@ Nom: Main de l'apprenti
 
 ------ Data ------
 RangeEN: 500 feet
-RangeFR: 
+RangeFR: 150 m
 TargetEN: 1 creature
 TargetFR: 1 créature
 ------ Description (en) ------
