--- a/data/spells/evocation-04-DZ9bzXYqMjAK9TzC.htm
+++ b/data/spells/evocation-04-DZ9bzXYqMjAK9TzC.htm
@@ -7,7 +7,7 @@ Nom: Cascade bénite
 AreasizeEN: 20-foot burst
 AreasizeFR: 
 RangeEN: 500 feet
-RangeFR: 
+RangeFR: 150 m
 MaterialEN: one vial of holy water
 MaterialFR: 
 ------ Description (en) ------
