--- a/data/spells/evocation-07-a3aQxCpoj1q1NQxC.htm
+++ b/data/spells/evocation-07-a3aQxCpoj1q1NQxC.htm
@@ -7,7 +7,7 @@ Nom: Explosion de lumière
 AreasizeEN: 60-foot burst
 AreasizeFR: 
 RangeEN: 500 feet
-RangeFR: 
+RangeFR: 150 m
 ------ Description (en) ------
 <p>A powerful globe of searing sunlight explodes in the area, dealing 8d10 fire damage to all creatures in the area, plus 8d10 additional positive damage to undead creatures. Each creature and object in the area must attempt a Reflex save. If the globe overlaps with an area of magical darkness, sunburst attempts to counteract the darkness effect.</p>
 <hr />
