--- a/data/spells/evocation-08-x7SPrsRxGb2Vy2nu.htm
+++ b/data/spells/evocation-08-x7SPrsRxGb2Vy2nu.htm
@@ -7,7 +7,7 @@ Nom: Tremblement de terre
 AreasizeEN: 60-foot burst
 AreasizeFR: 
 RangeEN: 500 feet
-RangeFR: 
+RangeFR: 150 m
 ------ Description (en) ------
 <p>You shake the ground, topple creatures into fissures, and collapse structures. The GM might add additional effects in certain areas. Cliffs might collapse, causing creatures to fall, or a lake might drain as fissures open up below its surface, leaving a morass of quicksand.</p>
 <ul>
