--- a/data/spells/illusion-04-HBJPsonQnWcC3qdX.htm
+++ b/data/spells/illusion-04-HBJPsonQnWcC3qdX.htm
@@ -7,7 +7,7 @@ Nom: Terrain hallucinatoire
 AreasizeEN: 50-foot burst
 AreasizeFR: 
 RangeEN: 500 feet
-RangeFR: 
+RangeFR: 150 m
 ------ Description (en) ------
 <p>You create an illusion that causes natural terrain to look, sound, feel, and smell like a different kind of terrain. This doesn't disguise any structures or creatures in the area. Any creature that touches the illusion or uses the Seek action to examine it can attempt to disbelieve your illusion.</p>
 <hr />
