--- a/data/spells/illusion-06-EOWh6VVcSjB3WPjX.htm
+++ b/data/spells/illusion-06-EOWh6VVcSjB3WPjX.htm
@@ -5,7 +5,7 @@ Nom: Illusion de l'ombre
 
 ------ Data ------
 RangeEN: 500 feet
-RangeFR: 
+RangeFR: 150 m
 ------ Description (en) ------
 <p>You create a shadowy illusion of a creature or a stationary object, but the illusion can exist only in an area of dim light or darkness. The spell ends if the illusion is ever out of an area of dim light or darkness. If the illusion is an object, it must fit within a 20-foot burst, and the creature can be of any size up to Gargantuan, filling a 20-foot-by-20-foot space.</p>
 <p>The object or creature appears to animate naturally; it even generates the appropriate sounds and smells, and feels believable to the touch, though its coloring is always muted.</p>
