--- a/data/spells/necromancy-07-0jadeyQIItIuRgeH.htm
+++ b/data/spells/necromancy-07-0jadeyQIItIuRgeH.htm
@@ -7,7 +7,7 @@ Nom: Éclipse soudaine
 AreasizeEN: 60-foot burst
 AreasizeFR: 
 RangeEN: 500 feet
-RangeFR: 
+RangeFR: 150 m
 ------ Description (en) ------
 <p>A globe of freezing darkness explodes in the area, dealing 8d10 cold damage to creatures in the area, plus 8d4 additional negative damage to living creatures. Each creature in the area must attempt a Reflex save. If the globe overlaps with an area of magical light or affects a creature affected by magical light, eclipse burst attempts to counteract the light effect.</p>
 <hr />
