champs des sorts

--- a/data/spells/abjuration-02-dZV8nZUKRhGIr6g9.htm
+++ b/data/spells/abjuration-02-dZV8nZUKRhGIr6g9.htm
@@ -7,7 +7,7 @@ Nom: Lien du cœur
 RangeEN: 20 feet
 RangeFR: 
 SecondaryCasterEN: 02
-SecondaryCasterFR: 
+SecondaryCasterFR: 2
 PrimaryCheckEN: Nature or Religion (expert)
 PrimaryCheckFR: 
 SecondaryCheckEN: Primary Check Nature or Religion (expert); Secondary Checks  Diplomacy, Society
