--- a/data/spells/abjuration-07-XZE4BawIlTf88Yl9.htm
+++ b/data/spells/abjuration-07-XZE4BawIlTf88Yl9.htm
@@ -5,7 +5,7 @@ Nom: Verrou dimensionnel
 
 ------ Data ------
 AreasizeEN: 60-foot burst
-AreasizeFR: 
+AreasizeFR: explosion de 18 m
 RangeEN: 120 feet
 RangeFR: 36 m
 ------ Description (en) ------
