--- a/data/spells/abjuration-10-X0t0gr7S7CeCt2Q5.htm
+++ b/data/spells/abjuration-10-X0t0gr7S7CeCt2Q5.htm
@@ -5,7 +5,7 @@ Nom: Invocation d'anima (Modifiée)
 
 ------ Data ------
 RangeEN: 10 miles
-RangeFR: 
+RangeFR: 15 km
 TargetEN: Primary and Secondary Casters
 TargetFR: 
 SecondaryCasterEN: 04
