--- a/data/spells/conjuration-03-u3G7KX1qpFJlSeWm.htm
+++ b/data/spells/conjuration-03-u3G7KX1qpFJlSeWm.htm
@@ -5,7 +5,7 @@ Nom: Pacte des Owb
 
 ------ Data ------
 SecondaryCasterEN: 02
-SecondaryCasterFR: 
+SecondaryCasterFR: 2
 PrimaryCheckEN: Occultism (expert)
 PrimaryCheckFR: 
 ------ Description (en) ------
