--- a/data/spells/conjuration-07-5ZW1w9f4gWlSIuWA.htm
+++ b/data/spells/conjuration-07-5ZW1w9f4gWlSIuWA.htm
@@ -7,7 +7,7 @@ Nom: Cercle de téléportation
 RangeEN: 20 feet
 RangeFR: 
 SecondaryCasterEN: 02
-SecondaryCasterFR: 
+SecondaryCasterFR: 2
 PrimaryCheckEN: Arcana or Occultism (master)
 PrimaryCheckFR: 
 SecondaryCheckEN: Crafting, Survival
