--- a/data/spells/conjuration-07-nzbnTqHgNKiGZkrZ.htm
+++ b/data/spells/conjuration-07-nzbnTqHgNKiGZkrZ.htm
@@ -9,7 +9,7 @@ RangeFR:
 TargetEN: Up to seven willing creatures of 14th  level or lower
 TargetFR: 
 SecondaryCasterEN: 02
-SecondaryCasterFR: 
+SecondaryCasterFR: 2
 PrimaryCheckEN: Arcana or Occultism (expert, the check has  the secret trait)
 PrimaryCheckFR: 
 SecondaryCheckEN: Arcana or Occultism  (whichever isn't used for the primary check), Society
