--- a/data/spells/divination-02-HTou8cG05yuSkesj.htm
+++ b/data/spells/divination-02-HTou8cG05yuSkesj.htm
@@ -7,7 +7,7 @@ Nom: Rapport
 RangeEN: touch
 RangeFR: contact
 TargetEN: 1 willing living creature
-TargetFR: 
+TargetFR: 1 créature vivante volontaire
 ------ Description (en) ------
 <p>As long as you and the target are on the same plane of existence and both alive, you remain aware of its present state. You know the target's direction from you, distance from you, and any conditions affecting it.</p>
 <hr />
