--- a/data/spells/divination-05-4Cntq9odgW6xMpAs.htm
+++ b/data/spells/divination-05-4Cntq9odgW6xMpAs.htm
@@ -9,7 +9,7 @@ RangeFR: contact
 TargetEN: yourself and up to 5 willing creatures
 TargetFR: 
 SecondaryCasterEN: 02
-SecondaryCasterFR: 
+SecondaryCasterFR: 2
 PrimaryCheckEN: Arcana or Occultism (master)
 PrimaryCheckFR: 
 SecondaryCheckEN: Arcana or Occultism (whichever isn't used for the  primary check), Survival
