--- a/data/spells/divination-07-hp6Q64dl7xbdn4gQ.htm
+++ b/data/spells/divination-07-hp6Q64dl7xbdn4gQ.htm
@@ -5,11 +5,11 @@ Nom: Mythes et légendes
 
 ------ Data ------
 SecondaryCasterEN: 02
-SecondaryCasterFR: 
+SecondaryCasterFR: 2
 PrimaryCheckEN: Occultism (master)
-PrimaryCheckFR: 
+PrimaryCheckFR: Occultisme (maître)
 SecondaryCheckEN: Performance, Society
-SecondaryCheckFR: 
+SecondaryCheckFR: Représentation, Société
 ------ Description (en) ------
 <p>You attempt to learn useful legends about a particular subject, which must be an important person, place, or thing. If the subject is present, increase the degree of success of your primary skill check by one step. If you have only vague information about the subject before attempting the ritual, decrease the degree of success of your primary skill check by one step. These modifiers cancel each other out if you have a subject present with little to no baseline information.</p>
 <hr />
