--- a/data/spells/enchantment-01-szIyEsvihc5e1w8n.htm
+++ b/data/spells/enchantment-01-szIyEsvihc5e1w8n.htm
@@ -7,7 +7,7 @@ Nom: Apaiser
 RangeEN: 30 feet
 RangeFR: 9 m
 TargetEN: 1 willing living creature
-TargetFR: 
+TargetFR: 1 créature vivante volontaire
 ------ Description (en) ------
 <p>You grace the target's mind, boosting its mental defenses and healing its wounds. The target regains 1d10+4 Hit Points when you Cast the Spell and gains a +2 status bonus to saves against mental effects for the duration.</p>
 <p>@Compendium[pf2e.spell-effects.nkk4O5fyzrC0057i]{Spell Effect: Soothe}</p>
