--- a/data/spells/evocation-05-3puDanGfpEt6jK5k.htm
+++ b/data/spells/evocation-05-3puDanGfpEt6jK5k.htm
@@ -5,7 +5,7 @@ Nom: Cône de froid
 
 ------ Data ------
 AreasizeEN: 60-foot cone
-AreasizeFR: 
+AreasizeFR: cône de 18 m
 ------ Description (en) ------
 <p>Icy cold rushes forth from your hands. You deal 12d6 cold damage to creatures in the area.</p>
 <hr />
