--- a/data/spells/evocation-05-crF4g9jRN1y84MSD.htm
+++ b/data/spells/evocation-05-crF4g9jRN1y84MSD.htm
@@ -5,7 +5,7 @@ Nom: Colère abyssale
 
 ------ Data ------
 AreasizeEN: 60-foot cone
-AreasizeFR: 
+AreasizeFR: cône de 18 m
 ------ Description (en) ------
 <p>You evoke the energy of an Abyssal realm. The damage types of the spell (one energy and one physical) are based on the result of rolling on the table below.</p>
 <h2>Abyssal Wrath</h2>
