--- a/data/spells/evocation-08-x7SPrsRxGb2Vy2nu.htm
+++ b/data/spells/evocation-08-x7SPrsRxGb2Vy2nu.htm
@@ -5,7 +5,7 @@ Nom: Tremblement de terre
 
 ------ Data ------
 AreasizeEN: 60-foot burst
-AreasizeFR: 
+AreasizeFR: explosion de 18 m
 RangeEN: 500 feet
 RangeFR: 150 m
 ------ Description (en) ------
