--- a/data/spells/evocation-10-wLIvH0AT1u7oa64N.htm
+++ b/data/spells/evocation-10-wLIvH0AT1u7oa64N.htm
@@ -5,7 +5,7 @@ Nom: Cataclysme
 
 ------ Data ------
 AreasizeEN: 60-foot burst
-AreasizeFR: 
+AreasizeFR: explosion de 18 m
 RangeEN: 1,000 feet
 RangeFR: 
 ------ Description (en) ------
