--- a/data/spells/necromancy-03-gIVaSCrLhhBzGHQY.htm
+++ b/data/spells/necromancy-03-gIVaSCrLhhBzGHQY.htm
@@ -9,7 +9,7 @@ RangeFR: 3 m
 TargetEN: 1 dead creature of up to 8th level
 TargetFR: 
 SecondaryCasterEN: 02
-SecondaryCasterFR: 
+SecondaryCasterFR: 2
 PrimaryCheckEN: Nature (expert)
 PrimaryCheckFR: 
 SecondaryCheckEN: Occultism,  Religion
