--- a/data/spells/necromancy-04-MTNlvZ0A9xY5sOg1.htm
+++ b/data/spells/necromancy-04-MTNlvZ0A9xY5sOg1.htm
@@ -9,7 +9,7 @@ RangeFR:
 TargetEN: 1 dead creature
 TargetFR: 
 SecondaryCasterEN: 02
-SecondaryCasterFR: 
+SecondaryCasterFR: 2
 PrimaryCheckEN: Religion (expert)
 PrimaryCheckFR: 
 SecondaryCheckEN: Occultism, Religion
