--- a/data/spells/necromancy-07-u3pdkfmy0AWICdoM.htm
+++ b/data/spells/necromancy-07-u3pdkfmy0AWICdoM.htm
@@ -5,9 +5,9 @@ Nom: Réanimation vorace
 
 ------ Data ------
 MaterialEN: You must be an evil dragon
-MaterialFR: 
+MaterialFR: Vous devez être un dragon mauvais
 PrimaryCheckEN: Arcana (master), Occultism (master), or Religion (master)
-PrimaryCheckFR: 
+PrimaryCheckFR: Arcanes (maître), Occultisme (maître) ou Religion (maître)
 ------ Description (en) ------
 <p>You destroy the gathered treasures with your breath weapon or other powerful magic, then invoke necromantic energies before you feed upon the charred and melted remains. As you do so, negative energy courses through your flesh, automatically killing you. Each individual ravener's <em>ravenous reanimation</em> requires three to five unique additional components. Whether or not you return as a ravener depends on the success of the ritual.</p>
 <hr />
