--- a/data/spells/abjuration-08-4ddJSjC9Zz5DX0oG.htm
+++ b/data/spells/abjuration-08-4ddJSjC9Zz5DX0oG.htm
@@ -9,11 +9,11 @@ RangeFR:
 TargetEN: 1 creature
 TargetFR: 1 créature
 SecondaryCasterEN: 02
-SecondaryCasterFR: 
+SecondaryCasterFR: 2
 PrimaryCheckEN: Arcana (legendary) or Occultism (legendary)
 PrimaryCheckFR: 
 SecondaryCheckEN: Society
-SecondaryCheckFR: 
+SecondaryCheckFR: Société
 ------ Description (en) ------
 <p>You perform a ritual to free a creature imprisoned, petrified, or otherwise put into stasis by any magical effects from all such effects, even effects like @Compendium[pf2e.spells-srd.2CNqkt2s2IYkVnv6]{Imprisonment} that don't have a duration, as long as <em>freedom</em>'s spell level is equal to or higher than the effect's spell level. To perform the ritual, you must be within 10 feet of the target, or within 10 feet of the place where the target was imprisoned (in the case of effects that trap the creature in an unreachable prison, like the oubliette form of Imprisonment). You must know the name of the creature and details of its background; if the creature is not a close associate, a failure or critical failure on a secondary Society check reduces even a critical success on the primary check to a failure.</p>
 <hr />
