--- a/data/spells/conjuration-03-uuoPmbjEtqzWZs0v.htm
+++ b/data/spells/conjuration-03-uuoPmbjEtqzWZs0v.htm
@@ -7,7 +7,7 @@ Nom: Domestiques invisibles
 AreasizeEN: 100 feet × 100 feet, up to 20 feet high
 AreasizeFR: 
 SecondaryCasterEN: 02
-SecondaryCasterFR: 
+SecondaryCasterFR: 2
 PrimaryCheckEN: Arcana or Occultism (expert)
 PrimaryCheckFR: 
 SecondaryCheckEN: Arcana or Occultism (whichever isn't used for the  primary check), Diplomacy
