--- a/data/spells/enchantment-01-Vctwx1ewa8HUOA94.htm
+++ b/data/spells/enchantment-01-Vctwx1ewa8HUOA94.htm
@@ -7,7 +7,7 @@ Nom: Édit diabolique
 RangeEN: 30 feet
 RangeFR: 9 m
 TargetEN: 1 willing living creature
-TargetFR: 
+TargetFR: 1 créature vivante volontaire
 ------ Description (en) ------
 <p>You issue a diabolic edict, demanding the target perform a particular task and offering rewards for its fulfillment. It gains a +1 status bonus to attack rolls and skill checks related to performing the task. If it refuses to perform the task you proclaimed, it instead takes a -1 status penalty to all its attack rolls and skill checks.</p>
 <p>@Compendium[pf2e.spell-effects.1kelGCsoXyGRqMd9]{Spell Effect: Diabolic Edict}</p>
