--- a/data/spells/necromancy-05-kqhPt9344UkcGVYO.htm
+++ b/data/spells/necromancy-05-kqhPt9344UkcGVYO.htm
@@ -9,7 +9,7 @@ RangeFR: 3 m
 TargetEN: 1 dead creature of up to 10th level
 TargetFR: 
 SecondaryCasterEN: 02
-SecondaryCasterFR: 
+SecondaryCasterFR: 2
 PrimaryCheckEN: Religion (expert)
 PrimaryCheckFR: 
 SecondaryCheckEN: Medicine, Society
