--- a/data/spells/necromancy-06-yUM5OYeMY8971b2S.htm
+++ b/data/spells/necromancy-06-yUM5OYeMY8971b2S.htm
@@ -5,13 +5,13 @@ Nom: Achever une lignée
 
 ------ Data ------
 RangeEN: 10 miles
-RangeFR: 
+RangeFR: 15 km
 TargetEN: 1 creature of a level no greater than double the terminate bloodline ritual's level
-TargetFR: 
+TargetFR: 1 créature d'un niveau pas supérieur au double du niveau du rituel Achever une lignée 
 PrimaryCheckEN: Occultism (master)
-PrimaryCheckFR: 
+PrimaryCheckFR: Occultisme (maître)
 SecondaryCheckEN: Society
-SecondaryCheckFR: 
+SecondaryCheckFR: Société
 ------ Description (en) ------
 <p>Mighty drow noble houses, including House Shraen, use this ritual to stamp out fledgling noble houses before they rise to power. At the ritual's completion, you place a contagious wasting disease upon the target creature with the intention of ending their familial bloodline.</p>
 <p>The ritual is easiest to cast on a subdued target, typically a low-ranking member of the targeted family bloodline who is kidnapped and has their memory wiped. If the target is conscious when the ritual is cast, the target attempts a Fortitude save against the ritual's DC; on a success, the ritual fails. Otherwise, the target is automatically affected by the dying bloodline disease.</p>
