--- a/data/spells/necromancy-07-0jadeyQIItIuRgeH.htm
+++ b/data/spells/necromancy-07-0jadeyQIItIuRgeH.htm
@@ -5,7 +5,7 @@ Nom: Éclipse soudaine
 
 ------ Data ------
 AreasizeEN: 60-foot burst
-AreasizeFR: 
+AreasizeFR: explosion de 18 m
 RangeEN: 500 feet
 RangeFR: 150 m
 ------ Description (en) ------
