--- a/data/spells/necromancy-08-4MOew29Z1oCX8O28.htm
+++ b/data/spells/necromancy-08-4MOew29Z1oCX8O28.htm
@@ -7,7 +7,7 @@ Nom: Instant de renouveau
 RangeEN: touch
 RangeFR: contact
 TargetEN: up to 6 creatures
-TargetFR: 
+TargetFR: jusqu'à 6 créatures
 ------ Description (en) ------
 <p>The targets experience a day's worth of recovery in an instant. Any detrimental effects that would be gone after 24 hours end, though this doesn't shorten the duration of any active spells affecting the targets. The targets regain Hit Points and recover from conditions as if they had taken 24 hours of rest, but they do not make their daily preparations again or gain any benefits of rest other than healing. The targets are then temporarily immune for 1 day.</p>
 ------ Description (fr) ------
