--- a/data/spells/transmutation-06-29AyhknPKiDBcy8s.htm
+++ b/data/spells/transmutation-06-29AyhknPKiDBcy8s.htm
@@ -9,7 +9,7 @@ RangeFR: 3 m
 TargetEN: 1 freestanding, non-magical object no larger than 3,000 cubic feet (the size of a Huge creature)
 TargetFR: 
 SecondaryCasterEN: 02
-SecondaryCasterFR: 
+SecondaryCasterFR: 2
 PrimaryCheckEN: Arcana (expert)
 PrimaryCheckFR: Arcanes (expert)
 SecondaryCheckEN: Crafting, Occultism
