champs des sorts

--- a/data/spells/evocation-02-4GE2ZdODgIQtg51c.htm
+++ b/data/spells/evocation-02-4GE2ZdODgIQtg51c.htm
@@ -5,7 +5,7 @@ Nom: Ténèbres
 
 ------ Data ------
 AreasizeEN: 20-foot burst
-AreasizeFR: 
+AreasizeFR: explosion de 6 m
 RangeEN: 120 feet
 RangeFR: 36 m
 ------ Description (en) ------
