--- a/data/spells/evocation-03-sxQZ6yqTn0czJxVd.htm
+++ b/data/spells/evocation-03-sxQZ6yqTn0czJxVd.htm
@@ -5,7 +5,7 @@ Nom: Boule de feu
 
 ------ Data ------
 AreasizeEN: 20-foot burst
-AreasizeFR: 
+AreasizeFR: explosion de 6 m
 RangeEN: 500 feet
 RangeFR: 150 m
 ------ Description (en) ------
