--- a/data/spells/evocation-04-DZ9bzXYqMjAK9TzC.htm
+++ b/data/spells/evocation-04-DZ9bzXYqMjAK9TzC.htm
@@ -5,7 +5,7 @@ Nom: Cascade bénite
 
 ------ Data ------
 AreasizeEN: 20-foot burst
-AreasizeFR: 
+AreasizeFR: explosion de 6 m
 RangeEN: 500 feet
 RangeFR: 150 m
 MaterialEN: one vial of holy water
