--- a/data/spells/necromancy-06-GzN9bG6cKZ96YC6l.htm
+++ b/data/spells/necromancy-06-GzN9bG6cKZ96YC6l.htm
@@ -7,7 +7,7 @@ Nom: Réclamer un mort-vivant
 RangeEN: 30 feet
 RangeFR: 9 m
 TargetEN: 1 undead creature
-TargetFR: 
+TargetFR: 1 créature morte-vivante
 ------ Description (en) ------
 <p>You attempt to wrest control of a target undead or force it to recognize you as its master. If the target is controlled by another creature, that controller attempts a Will saving throw to retain control; otherwise, the target must attempt a Will save.</p>
 <hr />
