--- a/data/spells/abjuration-01-4WAib3GichxLjp5p.htm
+++ b/data/spells/abjuration-01-4WAib3GichxLjp5p.htm
@@ -5,7 +5,7 @@ Nom: Alarme
 
 ------ Data ------
 AreasizeEN: 20-foot burst
-AreasizeFR: 
+AreasizeFR: explosion de 6 m
 RangeEN: touch
 RangeFR: contact
 MaterialEN: 3 gp silver bell focus
