--- a/data/spells/abjuration-02-02J0rDTk37KN2sjt.htm
+++ b/data/spells/abjuration-02-02J0rDTk37KN2sjt.htm
@@ -5,7 +5,7 @@ Nom: Éteindre
 
 ------ Data ------
 AreasizeEN: 20-foot burst
-AreasizeFR: 
+AreasizeFR: explosion de 6 m
 RangeEN: 120 feet
 RangeFR: 36 m
 ------ Description (en) ------
