--- a/data/spells/conjuration-04-3xD8DYrr8YDVYGg7.htm
+++ b/data/spells/conjuration-04-3xD8DYrr8YDVYGg7.htm
@@ -5,7 +5,7 @@ Nom: Piques de pierre
 
 ------ Data ------
 AreasizeEN: 20-foot burst
-AreasizeFR: 
+AreasizeFR: explosion de 6 m
 RangeEN: 60 feet
 RangeFR: 18 m 
 ------ Description (en) ------
