--- a/data/spells/divination-08-y2cQYLr5mljDSu1G.htm
+++ b/data/spells/divination-08-y2cQYLr5mljDSu1G.htm
@@ -5,7 +5,7 @@ Nom: Observation implacable
 
 ------ Data ------
 AreasizeEN: 20-foot burst
-AreasizeFR: 
+AreasizeFR: explosion de 6 m
 RangeEN: 100 feet
 RangeFR: 30 m
 TargetEN: 1 creature or object tracked and up to 5 other willing creatures
