--- a/data/spells/enchantment-03-aewxsale5xWEPKLk.htm
+++ b/data/spells/enchantment-03-aewxsale5xWEPKLk.htm
@@ -5,7 +5,7 @@ Nom: Zone de vérité
 
 ------ Data ------
 AreasizeEN: 20-foot burst
-AreasizeFR: 
+AreasizeFR: explosion de 6 m
 RangeEN: 30 feet
 RangeFR: 9 m
 ------ Description (en) ------
