--- a/data/spells/evocation-03-LFSwMtQVP05EzlZe.htm
+++ b/data/spells/evocation-03-LFSwMtQVP05EzlZe.htm
@@ -5,7 +5,7 @@ Nom: Explosion tempêtueuse
 
 ------ Data ------
 AreasizeEN: 20-foot burst
-AreasizeFR: 
+AreasizeFR: explosion de 6 m
 RangeEN: 100 feet
 RangeFR: 30 m
 ------ Description (en) ------
