--- a/data/spells/evocation-03-TT9owkeMBXJxcERB.htm
+++ b/data/spells/evocation-03-TT9owkeMBXJxcERB.htm
@@ -5,7 +5,7 @@ Nom: Rafale hors saison
 
 ------ Data ------
 AreasizeEN: 20-foot burst
-AreasizeFR: 
+AreasizeFR: explosion de 6 m
 RangeEN: 60 feet
 RangeFR: 18 m 
 ------ Description (en) ------
