--- a/data/spells/illusion-01-2oH5IufzdESuYxat.htm
+++ b/data/spells/illusion-01-2oH5IufzdESuYxat.htm
@@ -5,7 +5,7 @@ Nom: Objet illusoire
 
 ------ Data ------
 AreasizeEN: 20-foot burst
-AreasizeFR: 
+AreasizeFR: explosion de 6 m
 RangeEN: 500 feet
 RangeFR: 150 m
 ------ Description (en) ------
