--- a/data/spells/necromancy-01-IxyD7YdRbSSucxZp.htm
+++ b/data/spells/necromancy-01-IxyD7YdRbSSucxZp.htm
@@ -7,7 +7,7 @@ Nom: Imposition des mains (contre un mort-vivant)
 RangeEN: touch
 RangeFR: contact
 TargetEN: 1 undead creature
-TargetFR: 
+TargetFR: 1 créature morte-vivante
 ------ Description (en) ------
 <p>Your hands become infused with positive energy, healing a living creature or damaging an undead creature with a touch.</p>
 <p>If you use lay on hands on a willing living target, you restore 6 Hit Points; if the target is one of your allies, they also gain a +2 status bonus to AC for 1 round.</p>
