--- a/data/spells/necromancy-01-kcelf6IHl3L9VXXg.htm
+++ b/data/spells/necromancy-01-kcelf6IHl3L9VXXg.htm
@@ -7,7 +7,7 @@ Nom: Destruction de mort-vivant
 RangeEN: 30 feet
 RangeFR: 9 m
 TargetEN: 1 undead creature
-TargetFR: 
+TargetFR: 1 créature morte-vivante
 ------ Description (en) ------
 <p>You lance the target with energy. You deal 1d6 positive damage plus your spellcasting ability modifier. The target must attempt a basic Fortitude save. If the creature critically fails the save, it is also @Compendium[pf2e.conditionitems.MIRkyAjyBeXivMa7]{Enfeebled 1} for 1 round.</p>
 <hr />
