--- a/data/spells/necromancy-02-XFtO4BBI22Uox2QP.htm
+++ b/data/spells/necromancy-02-XFtO4BBI22Uox2QP.htm
@@ -5,7 +5,7 @@ Nom: Dégradation soudaine
 
 ------ Data ------
 AreasizeEN: 20-foot burst
-AreasizeFR: 
+AreasizeFR: explosion de 6 m
 RangeEN: 120 feet
 RangeFR: 36 m
 ------ Description (en) ------
