champs des sorts

--- a/data/spells/enchantment-03-Q56HLIHVKY6bC5W3.htm
+++ b/data/spells/enchantment-03-Q56HLIHVKY6bC5W3.htm
@@ -5,7 +5,7 @@ Nom: Beauté aveuglante
 
 ------ Data ------
 AreasizeEN: 30-foot cone
-AreasizeFR: 
+AreasizeFR: cône de 9 m
 ------ Description (en) ------
 <p>You channel the allure of your nymph bloodline into a terribly beautiful glance. Each enemy in the area must attempt a Will saving throw.</p>
 <hr />
