--- a/data/spells/enchantment-05-GaRQlC9Yw1BGKHfN.htm
+++ b/data/spells/enchantment-05-GaRQlC9Yw1BGKHfN.htm
@@ -5,7 +5,7 @@ Nom: Désespoir foudroyant
 
 ------ Data ------
 AreasizeEN: 30-foot cone
-AreasizeFR: 
+AreasizeFR: cône de 9 m
 ------ Description (en) ------
 <p>You inflict despair on creatures in the area. The effects for each creature are determined by its Will save.</p>
 <hr />
