--- a/data/spells/evocation-03-jupppBeFqhe6LMIb.htm
+++ b/data/spells/evocation-03-jupppBeFqhe6LMIb.htm
@@ -5,7 +5,7 @@ Nom: Souffle de dragon (Vert)
 
 ------ Data ------
 AreasizeEN: 30-foot cone
-AreasizeFR: 
+AreasizeFR: cône de 9 m
 ------ Description (en) ------
 <p>You spew energy from your mouth, dealing [[/r 5d6 #poison]] poison damage in a 30-foot cone. Affected creatures can make a basic Fortitude save.</p>
 <hr />
