--- a/data/spells/evocation-03-kfsv7zSHb3pr7s9v.htm
+++ b/data/spells/evocation-03-kfsv7zSHb3pr7s9v.htm
@@ -5,7 +5,7 @@ Nom: Souffle de dragon (Or ou rouge)
 
 ------ Data ------
 AreasizeEN: 30-foot cone
-AreasizeFR: 
+AreasizeFR: cône de 9 m
 ------ Description (en) ------
 <p>You spew energy from your mouth, dealing [[/r 5d6 #fire]] fire damage in a 30-foot cone. Affected creatures can make a basic Reflex save.</p>
 <hr />
