--- a/data/spells/necromancy-04-J5MNC4xq3CHH31qT.htm
+++ b/data/spells/necromancy-04-J5MNC4xq3CHH31qT.htm
@@ -5,7 +5,7 @@ Nom: Éradication de la non-mort
 
 ------ Data ------
 AreasizeEN: 30-foot cone
-AreasizeFR: 
+AreasizeFR: cône de 9 m
 ------ Description (en) ------
 <p>A massive deluge of life energy causes the undead to fall apart. Each undead creature in the area takes 4d12 positive damage.</p>
 <hr />
