--- a/data/spells/evocation-02-cB17yFc9456Pyfec.htm
+++ b/data/spells/evocation-02-cB17yFc9456Pyfec.htm
@@ -5,7 +5,7 @@ Nom: Vomir une nuée
 
 ------ Data ------
 AreasizeEN: 30-foot cone
-AreasizeFR: 
+AreasizeFR: cône de 9 m
 ------ Description (en) ------
 <p>You belch forth a swarm of magical vermin. You evoke and shape the creatures from your own imagination, allowing you to change the appearance of the creatures (typically a mix of centipedes, roaches, wasps, and worms), but this doesn't change the effect of the spell. The vermin swarm over anyone in the area, their bites and stings dealing [[/r 2d8 #piercing]] piercing damage (basic Reflex save). A creature that fails its saving throw also becomes @Compendium[pf2e.conditionitems.fesd1n5eVhpCSS18]{Sickened 1}. Once the spell ends, the swarm disappears.</p>
 <hr />
