--- a/data/spells/evocation-03-bmDgIbLa5NfkP97J.htm
+++ b/data/spells/evocation-03-bmDgIbLa5NfkP97J.htm
@@ -5,7 +5,7 @@ Nom: Souffle de dragon (Argent ou Blanc)
 
 ------ Data ------
 AreasizeEN: 30-foot cone
-AreasizeFR: 
+AreasizeFR: cône de 9 m
 ------ Description (en) ------
 <p>You spew energy from your mouth, dealing [[/r 5d6 #cold]] cold damage in a 30-foot cone. Affected creatures can make a basic Reflex save.</p>
 <hr />
