--- a/data/spells/evocation-07-d6o52BnjViNz7Gub.htm
+++ b/data/spells/evocation-07-d6o52BnjViNz7Gub.htm
@@ -5,7 +5,7 @@ Nom: Rayon prismatique
 
 ------ Data ------
 AreasizeEN: 30-foot cone
-AreasizeFR: 
+AreasizeFR: cône de 9 m
 ------ Description (en) ------
 <p>A spray of rainbow light beams cascades from your open hand. Each creature in the area must roll 1d8 on the table below to see which beam affects it, then attempt a saving throw of the indicated type. The table notes any additional traits that apply to each type of ray. If a creature is struck by multiple beams, it uses the same d20 result for all its saving throws. For all rays, a successful saving throw negates the effect for that creature.</p>
 <h3><strong>Prismatic Spray</strong></h3>
