--- a/data/spells/necromancy-06-fd31tAHSSGXyOxW6.htm
+++ b/data/spells/necromancy-06-fd31tAHSSGXyOxW6.htm
@@ -5,7 +5,7 @@ Nom: Saignée du vampire
 
 ------ Data ------
 AreasizeEN: 30-foot cone
-AreasizeFR: 
+AreasizeFR: cône de 9 m
 ------ Description (en) ------
 <p>You draw in the blood and life force of other creatures through your outstretched arms. You deal 12d6 negative damage to living creatures in the area. You gain temporary Hit Points equal to half the damage a single creature takes from this spell; calculate these temporary Hit Points using the creature that took the most damage. You lose any remaining temporary Hit Points after 1 minute.</p>
 <hr />
