valeurs des sorts ajoutées

--- a/data/spells/abjuration-04-SSsUC7rZo0CwayPn.htm
+++ b/data/spells/abjuration-04-SSsUC7rZo0CwayPn.htm
@@ -7,7 +7,7 @@ Nom: Souffrance vengeresse
 RangeEN: 30 feet
 RangeFR: 9 m
 TargetEN: the triggering creature
-TargetFR: 
+TargetFR: la créature déclencheuse
 ------ Description (en) ------
 <p><strong>Trigger</strong> A creature in range damages you.</p>
 <hr />
