--- a/data/spells/conjuration-04-zjG6NncHyAKqSF7m.htm
+++ b/data/spells/conjuration-04-zjG6NncHyAKqSF7m.htm
@@ -5,7 +5,7 @@ Nom: Pas interdimensionnel
 
 ------ Data ------
 RangeEN: 20 feet
-RangeFR: 
+RangeFR: 6 m
 ------ Description (en) ------
 <p>You teleport to a location up to 20 feet away within your line of sight.</p>
 <hr />
