--- a/data/spells/conjuration-05-vgy00hnqxN9VoeoF.htm
+++ b/data/spells/conjuration-05-vgy00hnqxN9VoeoF.htm
@@ -7,7 +7,7 @@ Nom: Allié planaire
 SecondaryCasterEN: 2, must share your religion
 SecondaryCasterFR: 
 PrimaryCheckEN: Religion (expert)
-PrimaryCheckFR: 
+PrimaryCheckFR: Religion (expert)
 SecondaryCheckEN: Diplomacy
 SecondaryCheckFR: 
 ------ Description (en) ------
