--- a/data/spells/conjuration-07-5ZW1w9f4gWlSIuWA.htm
+++ b/data/spells/conjuration-07-5ZW1w9f4gWlSIuWA.htm
@@ -5,7 +5,7 @@ Nom: Cercle de téléportation
 
 ------ Data ------
 RangeEN: 20 feet
-RangeFR: 
+RangeFR: 6 m
 SecondaryCasterEN: 02
 SecondaryCasterFR: 2
 PrimaryCheckEN: Arcana or Occultism (master)
