--- a/data/spells/conjuration-07-nzbnTqHgNKiGZkrZ.htm
+++ b/data/spells/conjuration-07-nzbnTqHgNKiGZkrZ.htm
@@ -5,7 +5,7 @@ Nom: Mot de Rappel
 
 ------ Data ------
 RangeEN: 20 feet
-RangeFR: 
+RangeFR: 6 m
 TargetEN: Up to seven willing creatures of 14th  level or lower
 TargetFR: 
 SecondaryCasterEN: 02
