--- a/data/spells/divination-04-GqvKSxzN7A7kuFk4.htm
+++ b/data/spells/divination-04-GqvKSxzN7A7kuFk4.htm
@@ -7,7 +7,7 @@ Nom: Tenter le sort
 RangeEN: 120 feet
 RangeFR: 36 m
 TargetEN: the triggering creature
-TargetFR: 
+TargetFR: la créature déclencheuse
 ------ Description (en) ------
 <p><strong>Trigger</strong> You or an ally within range attempts a saving throw.</p>
 <hr />
