--- a/data/spells/enchantment-04-7tR29sQt35NfIWqN.htm
+++ b/data/spells/enchantment-04-7tR29sQt35NfIWqN.htm
@@ -7,7 +7,7 @@ Nom: Anathème et représailles
 RangeEN: 30 feet
 RangeFR: 9 m
 TargetEN: the triggering creature
-TargetFR: 
+TargetFR: la créature déclencheuse
 ------ Description (en) ------
 <p><strong>Trigger</strong> A creature performs an act anathema to your deity.</p>
 <hr />
