--- a/data/spells/enchantment-06-NhGXgmI3AjkkwnPk.htm
+++ b/data/spells/enchantment-06-NhGXgmI3AjkkwnPk.htm
@@ -8,8 +8,8 @@ RangeEN: 60 feet
 RangeFR: 18 m 
 MaterialEN: A creature damages you
 MaterialFR: 
-TargetEN: The triggering creature
-TargetFR: 
+TargetEN: the triggering creature
+TargetFR: la créature déclencheuse
 ------ Description (en) ------
 <p><strong>Trigger</strong> A creature damages you.</p>
 <hr />
