--- a/data/spells/evocation-03-X1b9ollVMSLXDN9o.htm
+++ b/data/spells/evocation-03-X1b9ollVMSLXDN9o.htm
@@ -7,7 +7,7 @@ Nom: Litanie contre la colère
 RangeEN: 30 feet
 RangeFR: 9 m
 TargetEN: 1 evil creature
-TargetFR: 
+TargetFR: 1 créature mauvaise
 ------ Description (en) ------
 <p>Your litany rails against the sin of wrath, punishing the target for attacking good creatures. The target must attempt a Will save. A particularly wrathful creature, such as a wrath demon, uses the outcome one degree of success worse than the result of its saving throw. The target then becomes temporarily immune to all of your litanies for 1 minute.</p>
 <hr /><strong>Critical Success</strong> The target is unaffected.
