--- a/data/spells/evocation-07-n3b3pDmA6L5YRTyq.htm
+++ b/data/spells/evocation-07-n3b3pDmA6L5YRTyq.htm
@@ -7,7 +7,7 @@ Nom: Litanie de vertu
 RangeEN: 30 feet
 RangeFR: 9 m
 TargetEN: 1 evil creature
-TargetFR: 
+TargetFR: 1 créature mauvaise
 ------ Description (en) ------
 <p>Your litany denounces an evildoer, rendering it susceptible to the powers of good. The target gains weakness 7 to good. The target then becomes temporarily immune to all of your litanies for 1 minute.</p>
 <hr />
