--- a/data/spells/necromancy-02-TaaMEYdZXQXF0Sks.htm
+++ b/data/spells/necromancy-02-TaaMEYdZXQXF0Sks.htm
@@ -8,8 +8,8 @@ RangeEN: 30 feet
 RangeFR: 9 m
 MaterialEN: You can bleed
 MaterialFR: 
-TargetEN: The triggering creature
-TargetFR: 
+TargetEN: the triggering creature
+TargetFR: la créature déclencheuse
 ------ Description (en) ------
 <p><strong>Requirements</strong> You can bleed.</p>
 <p><strong>Trigger</strong> A creature deals piercing, slashing, or persistent bleed damage to you.</p>
