--- a/data/spells/necromancy-04-2RhZkHNv8ajq0yLq.htm
+++ b/data/spells/necromancy-04-2RhZkHNv8ajq0yLq.htm
@@ -5,7 +5,7 @@ Nom: Champ inactif
 
 ------ Data ------
 AreasizeEN: 15-foot emanation
-AreasizeFR: 
+AreasizeFR: émanation de 4,5 m
 RangeEN: 60 feet
 RangeFR: 18 m 
 ------ Description (en) ------
