--- a/data/spells/necromancy-04-MTNlvZ0A9xY5sOg1.htm
+++ b/data/spells/necromancy-04-MTNlvZ0A9xY5sOg1.htm
@@ -5,13 +5,13 @@ Nom: Repos éternel
 
 ------ Data ------
 RangeEN: 20 feet
-RangeFR: 
+RangeFR: 6 m
 TargetEN: 1 dead creature
 TargetFR: 
 SecondaryCasterEN: 02
 SecondaryCasterFR: 2
 PrimaryCheckEN: Religion (expert)
-PrimaryCheckFR: 
+PrimaryCheckFR: Religion (expert)
 SecondaryCheckEN: Occultism, Religion
 SecondaryCheckFR: 
 ------ Description (en) ------
