--- a/data/spells/necromancy-04-QE9f3OxvvBThymD4.htm
+++ b/data/spells/necromancy-04-QE9f3OxvvBThymD4.htm
@@ -5,7 +5,7 @@ Nom: Interstice ectoplasmique
 
 ------ Data ------
 AreasizeEN: 15-foot emanation
-AreasizeFR: 
+AreasizeFR: émanation de 4,5 m
 RangeEN: 30 feet
 RangeFR: 9 m
 ------ Description (en) ------
