--- a/data/spells/necromancy-04-ZhJ8d9Uk4lwIx86b.htm
+++ b/data/spells/necromancy-04-ZhJ8d9Uk4lwIx86b.htm
@@ -5,13 +5,13 @@ Nom: Croissance végétale
 
 ------ Data ------
 AreasizeEN: 1/2-mile-radius circle centered on you
-AreasizeFR: 
+AreasizeFR: un cercle de 750 m centré sur vous
 SecondaryCasterEN: 01
 SecondaryCasterFR: 1
 PrimaryCheckEN: Nature (expert)
-PrimaryCheckFR: 
+PrimaryCheckFR: Nature (expert)
 SecondaryCheckEN: Farming Lore or Survival
-SecondaryCheckFR: 
+SecondaryCheckFR: Connaissance de l'agriculture ou de Survie
 ------ Description (en) ------
 <p>You cause the plants within the area to be healthier and more fruitful. In addition to other benefits of healthy plants, this increases the crop yield for farms, depending on your success. If you cast it in the area of a @Compendium[pf2e.spells-srd.7yWXx3qC4eFNHhxD]{Blight}, <em>plant growth</em> attempts to counteract the <em>blight</em> instead of producing its usual effect.</p>
 <hr />
