--- a/data/spells/necromancy-05-2YIr0S2Gt14PMMQp.htm
+++ b/data/spells/necromancy-05-2YIr0S2Gt14PMMQp.htm
@@ -5,7 +5,7 @@ Nom: Étreinte de la tombe
 
 ------ Data ------
 AreasizeEN: 20-foot radius on the ground
-AreasizeFR: 
+AreasizeFR: rayon de 6 m sur le sol
 RangeEN: 60 feet
 RangeFR: 18 m 
 ------ Description (en) ------
