--- a/data/spells/necromancy-05-DgCS456mXKw97vNy.htm
+++ b/data/spells/necromancy-05-DgCS456mXKw97vNy.htm
@@ -7,7 +7,7 @@ Nom: Ode à Ouroboros
 RangeEN: 60 feet
 RangeFR: 18 m 
 TargetEN: the triggering creature
-TargetFR: 
+TargetFR: la créature déclencheuse
 ------ Description (en) ------
 <p><strong>Trigger</strong> A creature's @Compendium[pf2e.conditionitems.yZRUzMqrMmfLu0V1]{Dying} condition would reach the value at which they would die.</p>
 <hr />
