--- a/data/spells/necromancy-05-Hnc7eGi7vyZenAIm.htm
+++ b/data/spells/necromancy-05-Hnc7eGi7vyZenAIm.htm
@@ -7,7 +7,7 @@ Nom: Souffle de vie
 RangeEN: 60 feet
 RangeFR: 18 m 
 TargetEN: the triggering creature
-TargetFR: 
+TargetFR: la créature déclencheuse
 ------ Description (en) ------
 <p><strong>Trigger</strong> A living creature within range would die.</p>
 <hr />
