--- a/data/spells/abjuration-01-3wmX7htzOXiHLdAn.htm
+++ b/data/spells/abjuration-01-3wmX7htzOXiHLdAn.htm
@@ -7,7 +7,7 @@ Nom: Retarder les conséquences
 RangeEN: 30 feet
 RangeFR: 9 m
 TargetEN: the triggering creature
-TargetFR: 
+TargetFR: la créature déclencheuse
 ------ Description (en) ------
 <p><strong>Trigger</strong> A creature or object within range is hit by an attack.</p>
 <hr />
