--- a/data/spells/abjuration-01-w3uGXDVEdbLFZVO0.htm
+++ b/data/spells/abjuration-01-w3uGXDVEdbLFZVO0.htm
@@ -5,7 +5,7 @@ Nom: Halo angélique
 
 ------ Data ------
 AreasizeEN: 15-foot emanation
-AreasizeFR: 
+AreasizeFR: émanation de 4,5 m
 ------ Description (en) ------
 <p>You gain an angelic halo with an aura that increases allies' healing from the @Compendium[pf2e.spells-srd.rfZpqmj0AIIdkVIs]{Heal} spell. Allies in your halo's emanation who are healed by a heal spell gain a status bonus to Hit Points regained equal to double the heal spell's level.</p>
 ------ Description (fr) ------
