--- a/data/spells/abjuration-02-dZV8nZUKRhGIr6g9.htm
+++ b/data/spells/abjuration-02-dZV8nZUKRhGIr6g9.htm
@@ -5,7 +5,7 @@ Nom: Lien du cœur
 
 ------ Data ------
 RangeEN: 20 feet
-RangeFR: 
+RangeFR: 6 m
 SecondaryCasterEN: 02
 SecondaryCasterFR: 2
 PrimaryCheckEN: Nature or Religion (expert)
