--- a/data/spells/abjuration-04-DH9Y3RQGWO0GzXGU.htm
+++ b/data/spells/abjuration-04-DH9Y3RQGWO0GzXGU.htm
@@ -5,7 +5,7 @@ Nom: Sphère du protecteur
 
 ------ Data ------
 AreasizeEN: 15-foot emanation
-AreasizeFR: 
+AreasizeFR: émanation de 4,5 m
 ------ Description (en) ------
 <p>A protective aura emanates out from you, safeguarding you and your allies. You gain resistance 3 to all damage. Your allies also gain this resistance while they are within the area.</p>
 <hr />
