--- a/data/spells/abjuration-04-yY1H5zhO5dHmD8lz.htm
+++ b/data/spells/abjuration-04-yY1H5zhO5dHmD8lz.htm
@@ -5,7 +5,7 @@ Nom: Source de sérénité
 
 ------ Data ------
 AreasizeEN: 15-foot emanation
-AreasizeFR: 
+AreasizeFR: émanation de 4,5 m
 RangeEN: 30 feet
 RangeFR: 9 m
 ------ Description (en) ------
