--- a/data/spells/conjuration-01-W69zswpj0Trdy5rj.htm
+++ b/data/spells/conjuration-01-W69zswpj0Trdy5rj.htm
@@ -7,7 +7,7 @@ Nom: Bulle d'air
 RangeEN: 60 feet
 RangeFR: 18 m 
 TargetEN: the triggering creature
-TargetFR: 
+TargetFR: la créature déclencheuse
 ------ Description (en) ------
 <p>A bubble of pure air appears around the target's head, allowing it to breathe normally. The effect ends as soon as the target returns to an environment where it can breathe normally.</p>
 ------ Description (fr) ------
