--- a/data/spells/evocation-05-2mVW1KT3AjW2pvDO.htm
+++ b/data/spells/evocation-05-2mVW1KT3AjW2pvDO.htm
@@ -7,7 +7,7 @@ Nom: Litanie contre la paresse
 RangeEN: 30 feet
 RangeFR: 9 m
 TargetEN: 1 evil creature
-TargetFR: 
+TargetFR: 1 créature mauvaise
 ------ Description (en) ------
 <p>Your litany rails against the sin of sloth, interfering with the target's ability to react. The target must attempt a Will save. A particularly slothful creature, such as a sloth demon, uses the outcome one degree of success worse than the result of its saving throw. The target becomes temporarily immune to all of your litanies for 1 minute.</p>
 <hr />
