--- a/data/spells/necromancy-04-0qA4MfMkFklOz2Lk.htm
+++ b/data/spells/necromancy-04-0qA4MfMkFklOz2Lk.htm
@@ -7,7 +7,7 @@ Nom: Festin d'émotions
 RangeEN: 30 feet
 RangeFR: 9 m
 TargetEN: the triggering creature
-TargetFR: 
+TargetFR: la créature déclencheuse
 ------ Description (en) ------
 <p><strong>Trigger</strong> A creature within range becomes frightened.</p>
 <hr />
