--- a/data/spells/necromancy-05-59NR1hA2jPSgg2sW.htm
+++ b/data/spells/necromancy-05-59NR1hA2jPSgg2sW.htm
@@ -7,7 +7,7 @@ Nom: Enveloppe
 RangeEN: 60 feet
 RangeFR: 18 m 
 TargetEN: 15 foot cone
-TargetFR: 
+TargetFR: cône de 4,5 m
 ------ Description (en) ------
 <p>You point at a target in range, and its skin grows searing blisters filled with caustic fluid. The target must attempt a Fortitude save.</p>
 <hr />
