--- a/data/spells/necromancy-05-9WlTR9JlEcjRmGiD.htm
+++ b/data/spells/necromancy-05-9WlTR9JlEcjRmGiD.htm
@@ -7,7 +7,7 @@ Nom: Marque céleste
 RangeEN: 30 feet
 RangeFR: 9 m
 TargetEN: 1 evil creature
-TargetFR: 
+TargetFR: 1 créature mauvaise
 ------ Description (en) ------
 <p>A blazing symbol appears on the target, cursing it to face divine justice. You and your allies receive a +1 status bonus to your attack rolls and skill checks against it.</p>
 <p>Anytime a good creature damages it, the good creature deals an additional [[/r 1d4 #good]] good damage. The target is then temporarily immune for 1 minute.</p>
