--- a/data/spells/necromancy-05-ZLLY6ThJXCCrO0rL.htm
+++ b/data/spells/necromancy-05-ZLLY6ThJXCCrO0rL.htm
@@ -5,7 +5,7 @@ Nom: Mur de chair
 
 ------ Data ------
 RangeEN: 20 feet
-RangeFR: 
+RangeFR: 6 m
 ------ Description (en) ------
 <p>You craft a 20-foot-tall wall of living flesh in a straight line up to 30 feet long. The wall is 3 feet thick, and each 5-foot-long section has AC 10 and 75 HP. If you wish, the wall can be of a smaller length or height. You must create the wall in an unbroken open space so its edges don't pass through any creatures or objects, or the spell is lost. The wall can't be @Compendium[pf2e.actionspf2e.bT3skovyLUtP22ME]{Repaired} but can be healed by positive energy and healing spells and abilities. When you @Compendium[pf2e.actionspf2e.aBQ8ajvEBByv45yz]{Cast the Spell}, choose one of the following features for your wall.</p>
 <hr />
