--- a/data/spells/necromancy-05-kqhPt9344UkcGVYO.htm
+++ b/data/spells/necromancy-05-kqhPt9344UkcGVYO.htm
@@ -7,13 +7,13 @@ Nom: Résurrection
 RangeEN: 10 feet
 RangeFR: 3 m
 TargetEN: 1 dead creature of up to 10th level
-TargetFR: 
+TargetFR: 1 créature morte de niveau 10 maximum
 SecondaryCasterEN: 02
 SecondaryCasterFR: 2
 PrimaryCheckEN: Religion (expert)
-PrimaryCheckFR: 
+PrimaryCheckFR: Religion (expert)
 SecondaryCheckEN: Medicine, Society
-SecondaryCheckFR: 
+SecondaryCheckFR: Médecine, Société
 ------ Description (en) ------
 <p>You attempt to call forth the target's soul and return it to its body. This requires the target's body to be present and relatively intact. The target must have died within the past year. If @Compendium[pf2e.deities.QZD0u1jxwz0kj8uI]{Pharasma} has decided that the target's time has come or the target doesn't wish to return, this ritual automatically fails, but you discover this after the successful Religion check and can end the ritual without paying the cost.</p>
 <hr />
