--- a/data/spells/transmutation-06-NCUXsaj2yFxOVhrK.htm
+++ b/data/spells/transmutation-06-NCUXsaj2yFxOVhrK.htm
@@ -10,8 +10,8 @@ TargetEN: 1 frame covered in the skin of sentient humanoids
 TargetFR: 
 SecondaryCasterEN: 01
 SecondaryCasterFR: 1
-PrimaryCheckEN: Religion (Expert)
-PrimaryCheckFR: 
+PrimaryCheckEN: Religion (expert)
+PrimaryCheckFR: Religion (expert)
 SecondaryCheckEN: Crafting
 SecondaryCheckFR: Artisanat
 ------ Description (en) ------
