champs des sorts non traduits

--- a/data/spells/evocation-08-XkDCzMIyc0YOjw05.htm
+++ b/data/spells/evocation-08-XkDCzMIyc0YOjw05.htm
@@ -11,7 +11,7 @@ SecondaryCasterFR: 1
 PrimaryCheckEN: Nature (master)
 PrimaryCheckFR: 
 SecondaryCheckEN: Survival
-SecondaryCheckFR: 
+SecondaryCheckFR: Survie
 ------ Description (en) ------
 <p>You alter the weather, making it calm and normal for the season or choosing up to two effects based on the season.</p>
 <p>You can't specifically control the manifestations, such as the exact path of a tornado or the targets of lightning strikes.</p>
