--- a/data/spells/necromancy-01-k34hDOfIIMAxNL4a.htm
+++ b/data/spells/necromancy-01-k34hDOfIIMAxNL4a.htm
@@ -5,7 +5,7 @@ Nom: Sinistres volutes
 
 ------ Data ------
 AreasizeEN: 30-foot line
-AreasizeFR: 
+AreasizeFR: ligne de 9 m
 ------ Description (en) ------
 <p>Tendrils of darkness curl out from your fingertips and race through the air. You deal 2d4 negative damage and 1 persistent bleed damage to living creatures in the line. Each living creature in the line must attempt a Fortitude save.</p>
 <hr /><strong>Critical Success</strong> The creature is unaffected.
