--- a/data/spells/necromancy-02-c3b6LdLlQDPngNIb.htm
+++ b/data/spells/necromancy-02-c3b6LdLlQDPngNIb.htm
@@ -7,7 +7,7 @@ Nom: Création de mort-vivant
 RangeEN: 10 feet
 RangeFR: 3 m
 TargetEN: 1 dead creature
-TargetFR: 
+TargetFR: 1 créature morte
 SecondaryCasterEN: 01
 SecondaryCasterFR: 1
 PrimaryCheckEN: Arcana (expert), Occultism (expert), or Religion (expert)
