--- a/data/spells/necromancy-04-6nTBr5XNuKOuPM5m.htm
+++ b/data/spells/necromancy-04-6nTBr5XNuKOuPM5m.htm
@@ -7,7 +7,7 @@ Nom: Miasmes infâmes
 RangeEN: 30 feet
 RangeFR: 9 m
 TargetEN: 1 creature affected by a disease
-TargetFR: 
+TargetFR: 1 créature affectée par une maladie
 ------ Description (en) ------
 <p>You multiply the disease within a creature, drawing it into an infectious mist outside their body where it can spread to other creatures. The target must attempt a Will save. If the target is willing, it can choose to take the effects of critical failure.</p>
 <hr />
