--- a/data/spells/necromancy-04-eexkxcqnkXazsGfK.htm
+++ b/data/spells/necromancy-04-eexkxcqnkXazsGfK.htm
@@ -5,7 +5,7 @@ Nom: Affaiblissement
 
 ------ Data ------
 AreasizeEN: 30-foot line
-AreasizeFR: 
+AreasizeFR: ligne de 9 m
 ------ Description (en) ------
 <p>Extending a finger, you fire a beam of negative energy that weakens the life force of any creature it touches. Each living creature in the line must attempt a Fortitude save.</p>
 <hr />
