--- a/data/spells/necromancy-04-MTNlvZ0A9xY5sOg1.htm
+++ b/data/spells/necromancy-04-MTNlvZ0A9xY5sOg1.htm
@@ -7,13 +7,13 @@ Nom: Repos éternel
 RangeEN: 20 feet
 RangeFR: 6 m
 TargetEN: 1 dead creature
-TargetFR: 
+TargetFR: 1 créature morte
 SecondaryCasterEN: 02
 SecondaryCasterFR: 2
 PrimaryCheckEN: Religion (expert)
 PrimaryCheckFR: Religion (expert)
 SecondaryCheckEN: Occultism, Religion
-SecondaryCheckFR: 
+SecondaryCheckFR: Occultisme, Religion
 ------ Description (en) ------
 <p>You call upon gods, spirits, and stranger beings to bar a creature's spirit from ever returning. A spirit that doesn't wish to be so constrained can attempt a Will save to resist this ritual; on a critical success, it fools you into believing the ritual succeeded. This ritual has no effect on a target who is undead or whose soul is otherwise not in the afterlife.</p>
 <hr />
