--- a/data/spells/necromancy-04-hdzyDrRdHSse88XM.htm
+++ b/data/spells/necromancy-04-hdzyDrRdHSse88XM.htm
@@ -6,11 +6,11 @@ Nom:
 RangeEN: touch
 RangeFR: contact
 TargetEN: 1 Large or smaller creature or corpse
-TargetFR: 
+TargetFR: 1 créature ou un cadavre de taille Grande ou inférieure
 PrimaryCheckEN: Occultism (expert)
-PrimaryCheckFR: 
+PrimaryCheckFR: Occultisme (expert)
 SecondaryCheckEN: Medicine
-SecondaryCheckFR: 
+SecondaryCheckFR: Médecine
 ------ Description (en) ------
 <p>You perform a complex magical operation on a willing or @Compendium[pf2e.conditionitems.VcDeM8A5oI6VqhbM]{Restrained} creature or a corpse, delicately cutting into the skull and removing the creature’s brain without damaging the organ. If you have an empty brain cylinder on hand, you can place the extracted brain into the brain cylinder as part of this ritual (this includes preparing the brain cylinder for use, such as removing a previous brain and filling the cylinder with the preservative fluids required to make it function).</p>
 <p>Or at the GM’s discretion, if you have a nearly completed carrion golem at hand, you can place the extracted brain into the golem. The body of a living creature subjected to this ritual dies, regardless of the ritual’s result, as does the extracted brain if it is not placed into a golem or cylinder (or otherwise preserved) within 3 rounds.</p>
