champs traduits des sorts

--- a/data/spells/conjuration-04-iMmexY6ZosLS4I5R.htm
+++ b/data/spells/conjuration-04-iMmexY6ZosLS4I5R.htm
@@ -5,7 +5,7 @@ Nom: Porte vers l'au-delà
 
 ------ Data ------
 AreasizeEN: 20-foot emanation
-AreasizeFR: 
+AreasizeFR: émanation de 6 m
 RangeEN: 5 feet
 RangeFR: 
 ------ Description (en) ------
