--- a/data/spells/enchantment-01-dqaCLzINHBiKjh4J.htm
+++ b/data/spells/enchantment-01-dqaCLzINHBiKjh4J.htm
@@ -5,7 +5,7 @@ Nom: Appel aux armes
 
 ------ Data ------
 AreasizeEN: 20-foot emanation
-AreasizeFR: 
+AreasizeFR: émanation de 6 m
 ------ Description (en) ------
 <p><strong>Trigger</strong> You are about to roll for initiative.</p>
 <hr />
