champs des sorts

--- a/data/spells/necromancy-02-H4oF5szC7aogqtvw.htm
+++ b/data/spells/necromancy-02-H4oF5szC7aogqtvw.htm
@@ -7,7 +7,7 @@ Nom: Repas du ver
 RangeEN: 30 feet
 RangeFR: 9 m
 TargetEN: 1 corporeal creature
-TargetFR: 
+TargetFR: 1 créature tangible
 ------ Description (en) ------
 <p>Gnawing worms materialize within the flesh of the target creature, dealing [[/r 4d6 #piercing]] piercing damage and [[/r 1d6 #persistent piercing]] persistent piercing damage. If the target is a non-skeletal corporeal undead creature, you deal an extra [[/r 2d6 #extra persistent piercing]] persistent piercing damage. The target must attempt a Fortitude save.</p>
 <hr />
