--- a/data/spells/necromancy-02-TaaMEYdZXQXF0Sks.htm
+++ b/data/spells/necromancy-02-TaaMEYdZXQXF0Sks.htm
@@ -7,7 +7,7 @@ Nom: Vendetta du sang
 RangeEN: 30 feet
 RangeFR: 9 m
 MaterialEN: You can bleed
-MaterialFR: 
+MaterialFR: Vous pouvez saigner
 TargetEN: the triggering creature
 TargetFR: la créature déclencheuse
 ------ Description (en) ------
