--- a/data/spells/necromancy-03-gIVaSCrLhhBzGHQY.htm
+++ b/data/spells/necromancy-03-gIVaSCrLhhBzGHQY.htm
@@ -7,13 +7,13 @@ Nom: Réincarnation
 RangeEN: 10 feet
 RangeFR: 3 m
 TargetEN: 1 dead creature of up to 8th level
-TargetFR: 
+TargetFR: 1 créature morte de niveau 8 maximum
 SecondaryCasterEN: 02
 SecondaryCasterFR: 2
 PrimaryCheckEN: Nature (expert)
-PrimaryCheckFR: 
+PrimaryCheckFR: Nature (expert)
 SecondaryCheckEN: Occultism,  Religion
-SecondaryCheckFR: 
+SecondaryCheckFR: Occultisme, Religion
 ------ Description (en) ------
 <p>You call forth the target's soul and attempt to incarnate it into a brand-new body. As the soul won't be returning to the original body, only a small portion of the creature's remains are required.</p>
 <p>These remains must have been part of the original body at the time of death, and the target must have died within the past week. If Pharasma has decided that the target's time has come or the target's soul is trapped or doesn't wish to return, this ritual automatically fails, but you discover this after you succeed at the Religion check and can end the ritual without paying the cost.</p>
