--- a/data/spells/necromancy-02-RGBZrVRIEDb2G48h.htm
+++ b/data/spells/necromancy-02-RGBZrVRIEDb2G48h.htm
@@ -7,7 +7,7 @@ Nom: Brume apaisante
 RangeEN: 30 feet
 RangeFR: 9 m
 TargetEN: 1 willing living creature or 1 undead creature
-TargetFR: 
+TargetFR: 1 créature vivante volontaire ou 1 créature morte-vivante
 ------ Description (en) ------
 <p>You call forth a magical mist of positive energy that envelops a creature.</p>
 <p>The mist restores [[/r 2d8]] Hit Points to a target living creature and ends one source of persistent acid, bleed, fire, negative, or poison damage affecting it. If the creature is taking persistent damage from multiple sources, you select which one is removed.</p>
