--- a/data/spells/necromancy-02-dLdRqT6UxTKlsPgp.htm
+++ b/data/spells/necromancy-02-dLdRqT6UxTKlsPgp.htm
@@ -7,7 +7,7 @@ Nom: Mise à mort
 RangeEN: touch
 RangeFR: contact
 TargetEN: 1 living creature that has 0 HP
-TargetFR: 
+TargetFR: 1 créature vivante qui a 0 pv
 ------ Description (en) ------
 <p>You snuff the life out of a creature on the brink of death. The target must attempt a Will save. If this kills it, you gain 10 temporary HP and a +1 status bonus to attack and damage rolls for 10 minutes.</p>
 <hr /><strong>Critical Success</strong> The target is unaffected.
