--- a/data/spells/necromancy-02-xRgU9rrhmGAgG4Rc.htm
+++ b/data/spells/necromancy-02-xRgU9rrhmGAgG4Rc.htm
@@ -7,7 +7,7 @@ Nom: Préservation des morts
 RangeEN: touch
 RangeFR: contact
 TargetEN: 1 corpse
-TargetFR: 
+TargetFR: 1 cadavre
 ------ Description (en) ------
 <p>The targeted corpse doesn't decay, nor can it be transformed into an undead. If the corpse is subject to a spell that requires the corpse to have died within a certain amount of time (for example, raise dead), do not count the duration of gentle repose against that time. This spell also prevents ordinary bugs and pests (such as maggots) from consuming the body.</p>
 <hr />
