--- a/data/spells/necromancy-03-GUeRTriJkMlMlVrk.htm
+++ b/data/spells/necromancy-03-GUeRTriJkMlMlVrk.htm
@@ -7,7 +7,7 @@ Nom: Lier un mort-vivant
 RangeEN: 30 feet
 RangeFR: 9 m
 TargetEN: 1 mindless undead creature with a level no greater than bind undead's spell level
-TargetFR: 
+TargetFR: 1 mort-vivant dépourvu d'esprit avec un niveau pas supérieur au niveau du sort qui lie le mort-vivant
 ------ Description (en) ------
 <p>With a word of necromantic power, you seize control of the target. It gains the minion trait. If you or an ally uses any hostile actions against the target, the spell ends.</p>
 ------ Description (fr) ------
