champs de sorts

--- a/data/spells/abjuration-01-u2uSeH6YSbK1ajTy.htm
+++ b/data/spells/abjuration-01-u2uSeH6YSbK1ajTy.htm
@@ -7,7 +7,7 @@ Nom: Peau magique
 RangeEN: 30 feet
 RangeFR: 9 m
 TargetEN: your animal companion
-TargetFR: 
+TargetFR: votre compagnon animal
 ------ Description (en) ------
 <p>Your animal companion grows a thicker hide, matted fur, or a harder shell, granting it a +1 status bonus to AC.</p>
 <p>@Compendium[pf2e.spell-effects.qhNUfwpkD8BRw4zj]{Spell Effect: Magic Hide}</p>
