--- a/data/spells/necromancy-01-2iQKhCQBijhj5Rf3.htm
+++ b/data/spells/necromancy-01-2iQKhCQBijhj5Rf3.htm
@@ -7,7 +7,7 @@ Nom: Armes perturbatrices
 RangeEN: touch
 RangeFR: contact
 TargetEN: up to two weapons, each of which must be wielded by you or a willing ally, or else unattended
-TargetFR: 
+TargetFR: jusqu'à 2 armes, chacune d'elle devant être maniée par vous ou un allié volontaire ou être non tenues 
 ------ Description (en) ------
 <p>You infuse weapons with positive energy. Attacks with these weapons deal an extra 1d4 positive damage to undead.</p>
 <hr />
