--- a/data/spells/necromancy-01-KIV2LqzS5KtqOItV.htm
+++ b/data/spells/necromancy-01-KIV2LqzS5KtqOItV.htm
@@ -5,9 +5,9 @@ Nom: Guérison de compagnon
 
 ------ Data ------
 RangeEN: touch or 30 ft
-RangeFR: 
+RangeFR: contact ou 9 m
 TargetEN: your animal companion
-TargetFR: 
+TargetFR: votre compagnon animal
 ------ Description (en) ------
 <p>You harness positive energy to heal your animal companion's wounds. You restore [[/r 1d10]] Hit Points to your animal companion. The number of actions you spend @Compendium[pf2e.actionspf2e.aBQ8ajvEBByv45yz]{Casting this Spell} determines range and other parameters.</p>
 <ul>
