--- a/data/spells/necromancy-01-SnjhtQYexDtNDdEg.htm
+++ b/data/spells/necromancy-01-SnjhtQYexDtNDdEg.htm
@@ -7,7 +7,7 @@ Nom: Stabilisation
 RangeEN: 30 feet
 RangeFR: 9 m
 TargetEN: 1 dying creature
-TargetFR: 
+TargetFR: 1 créature mourante
 ------ Description (en) ------
 <p>Positive energy shuts death's door. The target loses the @Compendium[pf2e.conditionitems.yZRUzMqrMmfLu0V1]{Dying} condition, though it remains @Compendium[pf2e.conditionitems.fBnFDH2MTzgFijKf]{Unconscious} at 0 Hit Points.</p>
 ------ Description (fr) ------
