--- a/data/spells/necromancy-01-Zmh4ynfnCtwKeAYl.htm
+++ b/data/spells/necromancy-01-Zmh4ynfnCtwKeAYl.htm
@@ -5,7 +5,7 @@ Nom: Guérison des animaux
 
 ------ Data ------
 RangeEN: varies
-RangeFR: 
+RangeFR: variable
 TargetEN: 1 willing living animal creature
 TargetFR: 
 ------ Description (en) ------
