--- a/data/spells/necromancy-01-ekGHLJSHGgWMUwkY.htm
+++ b/data/spells/necromancy-01-ekGHLJSHGgWMUwkY.htm
@@ -7,7 +7,7 @@ Nom: Toucher de corruption (Soins)
 RangeEN: touch
 RangeFR: contact
 TargetEN: 1 willing undead creature
-TargetFR: 
+TargetFR: 1 créature morte vivante volontaire
 ------ Description (en) ------
 <p>You infuse the target with negative energy. If the target is living, this deals 1d6 negative negative damage (basic Fortitude save); on a failed save, the target also takes a -2 status penalty to AC for 1 round.</p>
 <p>@Compendium[pf2e.spell-effects.GhNVAYtoF5hK3AlD]{Spell Effect: Touch of Corruption}</p>
