--- a/data/spells/necromancy-01-mAMEt4FFbdqoRnkN.htm
+++ b/data/spells/necromancy-01-mAMEt4FFbdqoRnkN.htm
@@ -7,7 +7,7 @@ Nom: Contact glacial
 RangeEN: touch
 RangeFR: contact
 TargetEN: 1 living or undead creature
-TargetFR: 
+TargetFR: 1 créature vivante ou morte-vivante
 ------ Description (en) ------
 <p>Siphoning negative energy into yourself, your hand radiates a pale darkness. Your touch weakens the living and disorients undead, possibly even causing them to flee. The effect depends on whether the target is living or undead.</p>
 <ul>
