--- a/data/spells/necromancy-01-rVhHaWqUsVUO4GuY.htm
+++ b/data/spells/necromancy-01-rVhHaWqUsVUO4GuY.htm
@@ -7,7 +7,7 @@ Nom: Éjection de l'âme
 RangeEN: touch
 RangeFR: contact
 TargetEN: 1 living creature that has a soul
-TargetFR: 
+TargetFR: 1 créature vivante possédant une âme
 ------ Description (en) ------
 <p>Your touch disrupts the connection between body and soul, possibly forcing the soul out of the body altogether. The target must attempt a Fortitude save. You can allow allies to choose the degree of success instead of rolling a saving throw.</p>
 <hr />
