--- a/data/spells/necromancy-01-rfZpqmj0AIIdkVIs.htm
+++ b/data/spells/necromancy-01-rfZpqmj0AIIdkVIs.htm
@@ -7,7 +7,7 @@ Nom: Guérison
 AreasizeEN: varies
 AreasizeFR: 
 RangeEN: varies
-RangeFR: 
+RangeFR: variable
 TargetEN: 1 willing living creature or 1 undead
 TargetFR: 
 ------ Description (en) ------
