--- a/data/spells/necromancy-01-wdA52JJnsuQWeyqz.htm
+++ b/data/spells/necromancy-01-wdA52JJnsuQWeyqz.htm
@@ -7,9 +7,9 @@ Nom: Mise à mal
 AreasizeEN: varies
 AreasizeFR: 
 RangeEN: varies
-RangeFR: 
+RangeFR: variable
 TargetEN: 1 living creature or 1 willing undead creature
-TargetFR: 
+TargetFR: 1 créature vivante ou 1 créature morte-vivante volontaire
 ------ Description (en) ------
 <p>You channel negative energy to harm the living or heal the undead. If the target is a living creature, you deal 1d8 negative damage to it, and it gets a basic Fortitude save. If the target is a willing undead creature, you restore that amount of Hit Points. The number of actions you spend when Casting this Spell determines its targets, range, area, and other parameters.</p>
 <hr />
