--- a/data/spells/abjuration-05-YvXKGlHOt7mdW2jZ.htm
+++ b/data/spells/abjuration-05-YvXKGlHOt7mdW2jZ.htm
@@ -7,7 +7,7 @@ Nom: Protection contre la mort
 RangeEN: touch
 RangeFR: contact
 TargetEN: 1 living creature touched
-TargetFR: 
+TargetFR: 1 créature vivante touchée
 ------ Description (en) ------
 <p>You shield a creature from the ravages of negative energy.</p>
 <p>It receives a +4 status bonus to saves against death and negative effects, gains negative resistance 10, and suppresses the effects of the @Compendium[pf2e.conditionitems.3uh1r86TzbQvosxv]{Doomed} condition.</p>
