--- a/data/spells/evocation-05-IqJ9URobmJ9L9UBG.htm
+++ b/data/spells/evocation-05-IqJ9URobmJ9L9UBG.htm
@@ -7,7 +7,7 @@ Nom: Explosion d'ombre
 AreasizeEN: varies
 AreasizeFR: 
 RangeEN: varies
-RangeFR: 
+RangeFR: variable
 ------ Description (en) ------
 <p>You shape the quasi-real substance of the Shadow Plane into a blast. Choose acid, bludgeoning, cold, electricity, fire, force, piercing, slashing, or sonic damage, and choose a 30-foot cone, a 15-foot burst within 120 feet, or a 50-foot line. The blast deals 5d8 damage of the type you chose to each creature in the area.</p>
 <hr />
