--- a/data/spells/necromancy-01-gSUQlTDYoLDGAsCP.htm
+++ b/data/spells/necromancy-01-gSUQlTDYoLDGAsCP.htm
@@ -7,7 +7,7 @@ Nom: Hymne de guérison
 RangeEN: 30 feet
 RangeFR: 9 m
 TargetEN: you or 1 ally
-TargetFR: 
+TargetFR: vous ou un allié
 ------ Description (en) ------
 <p>Your divine singing mends wounds and provides a temporary respite from harm. The target gains @Compendium[pf2e.bestiary-ability-glossary-srd.fJSNOw4zHGbIm4bZ]{Fast Healing} 2.</p>
 <p>When you Cast this Spell and each time you Sustain the Spell, the target gains 2 temporary Hit Points, which last for 1 round.</p>
