--- a/data/spells/necromancy-01-qXTB7Ec9yYh5JPPV.htm
+++ b/data/spells/necromancy-01-qXTB7Ec9yYh5JPPV.htm
@@ -7,7 +7,7 @@ Nom: Purifier la nourriture et la boisson
 RangeEN: touch
 RangeFR: contact
 TargetEN: 1 cubic foot of contaminated food or water
-TargetFR: 
+TargetFR: 1 cube de 30 cm de côté de nourriture ou d'eau contaminée
 ------ Description (en) ------
 <p>You remove toxins and contaminations from food and drink, making them safe to consume. This spell doesn't prevent future contamination, natural decay, or spoilage. One cubic foot of liquid is roughly 8 gallons.</p>
 ------ Description (fr) ------
