--- a/data/spells/necromancy-01-vQuwLqtFFYt0K15N.htm
+++ b/data/spells/necromancy-01-vQuwLqtFFYt0K15N.htm
@@ -7,7 +7,7 @@ Nom: Baie nourricière
 RangeEN: touch
 RangeFR: contact
 TargetEN: 1 ripe berry
-TargetFR: 
+TargetFR: 1 baie mûre
 ------ Description (en) ------
 <p>You imbue the target berry with the bounty of nature, turning it into a goodberry that can heal and sustain far beyond its normal capacity. A creature can eat the goodberry with an Interact action to regain 1d6+4 Hit Points. A berry not consumed during the duration withers away. Every six goodberries consumed gives as much nourishment as one square meal for a typical human.</p>
 <p>@Compendium[pf2e.spell-effects.ppVKJY6AYggn2Fma]{Spell Effect: Goodberry}</p>
