--- a/data/spells/necromancy-01-yp4w9SG4RuqRM8KD.htm
+++ b/data/spells/necromancy-01-yp4w9SG4RuqRM8KD.htm
@@ -7,7 +7,7 @@ Nom: Animation d'objet
 RangeEN: 30 feet
 RangeFR: 9 m
 TargetEN: 1 unattended object up to 1 bulk
-TargetFR: 
+TargetFR: 1 objet non tenu d'un encombrement maximum de 1
 ------ Description (en) ------
 <p>Using a sliver of Baba Yaga's power, you briefly bring an object to life. The object gains a means of locomotion, such as sprouting chicken legs, and Strides up to 25 feet to a space you decide within range. If you spent 2 actions Casting the Spell, the object then attacks one creature of your choice adjacent to its new space. Make a melee spell attack roll against the creature. On a success, the creature takes bludgeoning, piercing, or slashing damage (as appropriate for the object) equal to 1d4 plus your spellcasting ability modifier, and on a critical success, it takes double damage.</p>
 <hr />
