--- a/data/spells/necromancy-04-qzsQmpiQodHBBWYI.htm
+++ b/data/spells/necromancy-04-qzsQmpiQodHBBWYI.htm
@@ -7,7 +7,7 @@ Nom: Alimentation maléfique
 RangeEN: touch
 RangeFR: contact
 TargetEN: 1 willing undead creature
-TargetFR: 1 créature morte-vivante volontaire
+TargetFR: 1 créature morte vivante volontaire1 créature morte-vivante volontaire
 ------ Description (en) ------
 <p>You embed a seed of negative energy in an undead creature, restoring its unnatural vigor. The target gains fast healing 7. This healing comes from negative energy, so it heals the undead rather than damaging it.</p>
 <hr />
