--- a/data/spells/transmutation-04-8rj45fKzCFcB0fxs.htm
+++ b/data/spells/transmutation-04-8rj45fKzCFcB0fxs.htm
@@ -7,7 +7,7 @@ Nom: Compagnon aggrandi
 RangeEN: 30 feet
 RangeFR: 9 m
 TargetEN: your animal companion
-TargetFR: 
+TargetFR: votre compagnon animal
 ------ Description (en) ------
 <p>Your animal companion grows much larger, towering over its foes in battle. Your animal companion becomes Huge, gaining the effects of a 4th-level @Compendium[pf2e.spells-srd.wzctak6BxOW8xvFV]{Enlarge} spell.</p>
 ------ Description (fr) ------
