champs des sorts

--- a/data/spells/divination-05-R9xqCBblkS5KE4y7.htm
+++ b/data/spells/divination-05-R9xqCBblkS5KE4y7.htm
@@ -5,7 +5,7 @@ Nom: Communication à distance
 
 ------ Data ------
 RangeEN: planetary
-RangeFR: 
+RangeFR:  planétaire
 TargetEN: 1 creature with whom you are familiar
 TargetFR: 
 ------ Description (en) ------
