--- a/data/spells/divination-06-r784cIz17eWujtQj.htm
+++ b/data/spells/divination-06-r784cIz17eWujtQj.htm
@@ -5,7 +5,7 @@ Nom: Scrutation
 
 ------ Data ------
 RangeEN: planetary
-RangeFR: 
+RangeFR:  planétaire
 TargetEN: 1 creature
 TargetFR: 1 créature
 ------ Description (en) ------
