--- a/data/spells/enchantment-09-ItZgGznUBhgWBwFG.htm
+++ b/data/spells/enchantment-09-ItZgGznUBhgWBwFG.htm
@@ -5,7 +5,7 @@ Nom: Ordre télépathique
 
 ------ Data ------
 RangeEN: planetary
-RangeFR: 
+RangeFR:  planétaire
 TargetEN: 1 creature you've telepathically contacted before
 TargetFR: 
 ------ Description (en) ------
