--- a/data/spells/evocation-04-K4LXpaBWrGy6jIER.htm
+++ b/data/spells/evocation-04-K4LXpaBWrGy6jIER.htm
@@ -5,7 +5,7 @@ Nom: Déluge
 
 ------ Data ------
 AreasizeEN: 30-foot burst
-AreasizeFR: 
+AreasizeFR: explosion de 9 m
 RangeEN: 120 feet
 RangeFR: 36 m
 ------ Description (en) ------
