--- a/data/spells/evocation-07-n8eEXXAtguoErW0y.htm
+++ b/data/spells/evocation-07-n8eEXXAtguoErW0y.htm
@@ -5,7 +5,7 @@ Nom: Toile d'ombre
 
 ------ Data ------
 AreasizeEN: 30-foot burst
-AreasizeFR: 
+AreasizeFR: explosion de 9 m
 ------ Description (en) ------
 <p>Grasping darkness surges from you, dealing [[/r 14d4 #negative]] negative damage. Each creature in the area must attempt a Fortitude save.</p>
 <hr />
