--- a/data/spells/illusion-04-Uqj344bezBq3ESdq.htm
+++ b/data/spells/illusion-04-Uqj344bezBq3ESdq.htm
@@ -5,7 +5,7 @@ Nom: Cauchemar
 
 ------ Data ------
 RangeEN: planetary
-RangeFR: 
+RangeFR:  planétaire
 TargetEN: 1 creature you know by name
 TargetFR: 
 ------ Description (en) ------
