--- a/data/spells/illusion-05-Ucf8eynbZMfUucjE.htm
+++ b/data/spells/illusion-05-Ucf8eynbZMfUucjE.htm
@@ -5,7 +5,7 @@ Nom: Scène illusoire
 
 ------ Data ------
 AreasizeEN: 30-foot burst
-AreasizeFR: 
+AreasizeFR: explosion de 9 m
 RangeEN: 500 feet
 RangeFR: 150 m
 ------ Description (en) ------
