--- a/data/spells/illusion-09-qDjeG6dxT4aEEC6J.htm
+++ b/data/spells/illusion-09-qDjeG6dxT4aEEC6J.htm
@@ -7,7 +7,7 @@ Nom: Ennemi subconscient
 RangeEN: 120 feet
 RangeFR: 36 m
 TargetEN: any number of creatures
-TargetFR: 
+TargetFR: n'importe quelle nombre de créatures
 ------ Description (en) ------
 <p>You fill the targets' minds with terrifying images of fearsome creatures, each drawn from the targets' worst fears. Only the targets can see their assailants. Each target takes 16d6 mental damage and must attempt a Will save.</p>
 <hr />
