--- a/data/spells/abjuration-05-XlQBVvlDWGrGlApl.htm
+++ b/data/spells/abjuration-05-XlQBVvlDWGrGlApl.htm
@@ -5,7 +5,7 @@ Nom: Établir une protection
 
 ------ Data ------
 AreasizeEN: 30-foot burst
-AreasizeFR: 
+AreasizeFR: explosion de 9 m
 ------ Description (en) ------
 <p><span>You bind a part of your essence to your surroundings, creating a warded area that grants you power within it, but drains you outside of it. While within the area, you can make nature's wrath Strikes by commanding plants, wind, rocks, and other natural features to attack enemies. These are melee Strikes that use your spell attack modifier, can target any creature within the ward, and deal bludgeoning, piercing, or slashing damage equal to [[/r 2d8]] plus your spellcasting ability modifier. </span></p>
 <p><span>Upon @Compendium[pf2e.actionspf2e.aBQ8ajvEBByv45yz]{Casting the Spell}, you can immediately make a single nature's wrath Strike. You are @Compendium[pf2e.conditionitems.nlCjDvLMf2EkV2dl]{Quickened} while inside the ward, and can use the additional action only to make nature's wrath Strikes. You are @Compendium[pf2e.conditionitems.xYTAsEpcJE1Ccni3]{Slowed 1} while outside the area. </span></p>
