--- a/data/spells/enchantment-03-yM3KTTSAIHhyuP14.htm
+++ b/data/spells/enchantment-03-yM3KTTSAIHhyuP14.htm
@@ -5,7 +5,7 @@ Nom: Message onirique
 
 ------ Data ------
 RangeEN: planetary
-RangeFR: 
+RangeFR:  planétaire
 TargetEN: 1 creature you know by name and have met in person
 TargetFR: 
 ------ Description (en) ------
