--- a/data/spells/illusion-06-0XP2XOxT9VSiXFDr.htm
+++ b/data/spells/illusion-06-0XP2XOxT9VSiXFDr.htm
@@ -5,7 +5,7 @@ Nom: Calamité imaginaire
 
 ------ Data ------
 AreasizeEN: 30-foot burst
-AreasizeFR: 
+AreasizeFR: explosion de 9 m
 RangeEN: 500 feet
 RangeFR: 150 m
 ------ Description (en) ------
