--- a/data/spells/illusion-08-rwCh2qTYPA44KEoK.htm
+++ b/data/spells/illusion-08-rwCh2qTYPA44KEoK.htm
@@ -5,9 +5,9 @@ Nom: Conseil onirique
 
 ------ Data ------
 RangeEN: planetary
-RangeFR: 
+RangeFR:  planétaire
 TargetEN: up to 12 creatures you know by name and have met in person
-TargetFR: 
+TargetFR: jusqu'à 12 créatures dont vous connaissez le nom et avez rencontré en personne
 ------ Description (en) ------
 <p>When you Cast this Spell, any targets-including you-can choose to immediately fall asleep. The spell ends for any creatures that don't choose to fall asleep. Sleepers join a shared dream, where they can communicate with one another as though they were in the same room. Individual targets leave this shared dream upon awakening, and if all the targets awaken, the spell ends.</p>
 ------ Description (fr) ------
