champs des sorts

--- a/data/spells/conjuration-02-9s5tqqXNzcoKamWx.htm
+++ b/data/spells/conjuration-02-9s5tqqXNzcoKamWx.htm
@@ -5,7 +5,7 @@ Nom: Toile d'araignée
 
 ------ Data ------
 AreasizeEN: 10-foot burst
-AreasizeFR: 
+AreasizeFR: explosion de 3 m
 RangeEN: 30 feet
 RangeFR: 9 m
 ------ Description (en) ------
