--- a/data/spells/illusion-03-K2WpC3FFoHrqX9Q5.htm
+++ b/data/spells/illusion-03-K2WpC3FFoHrqX9Q5.htm
@@ -5,7 +5,7 @@ Nom: Lueurs hypnotiques
 
 ------ Data ------
 AreasizeEN: 10-foot burst
-AreasizeFR: 
+AreasizeFR: explosion de 3 m
 RangeEN: 120 feet
 RangeFR: 36 m
 ------ Description (en) ------
