--- a/data/spells/enchantment-02-b515AZlB0sridKSq.htm
+++ b/data/spells/enchantment-02-b515AZlB0sridKSq.htm
@@ -5,7 +5,7 @@ Nom: Apaisement des émotions
 
 ------ Data ------
 AreasizeEN: 10-foot burst
-AreasizeFR: 
+AreasizeFR: explosion de 3 m
 RangeEN: 120 feet
 RangeFR: 36 m
 ------ Description (en) ------
