--- a/data/spells/evocation-01-HGmBY8KjgLV97nUp.htm
+++ b/data/spells/evocation-01-HGmBY8KjgLV97nUp.htm
@@ -5,7 +5,7 @@ Nom: Sable décapant
 
 ------ Data ------
 AreasizeEN: 10-foot burst
-AreasizeFR: 
+AreasizeFR: explosion de 3 m
 RangeEN: 60 feet
 RangeFR: 18 m 
 ------ Description (en) ------
