--- a/data/spells/evocation-02-HRb2doyaLtaoCfi3.htm
+++ b/data/spells/evocation-02-HRb2doyaLtaoCfi3.htm
@@ -5,7 +5,7 @@ Nom: Lueurs féériques
 
 ------ Data ------
 AreasizeEN: 10-foot burst
-AreasizeFR: 
+AreasizeFR: explosion de 3 m
 RangeEN: 120 feet
 RangeFR: 36 m
 ------ Description (en) ------
