--- a/data/spells/evocation-02-WqPhJNzLa8vSjrH6.htm
+++ b/data/spells/evocation-02-WqPhJNzLa8vSjrH6.htm
@@ -5,7 +5,7 @@ Nom: Assaut animé
 
 ------ Data ------
 AreasizeEN: 10-foot burst
-AreasizeFR: 
+AreasizeFR: explosion de 3 m
 RangeEN: 120 feet
 RangeFR: 36 m
 ------ Description (en) ------
